--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
             risa de patata XD
         </title>
         <link rel="stylesheet" href="style.css"/>
+        <script src="Script.js" ></script>
     </head>
     <body>
-        
+
     </body>
 </html>
