--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        
+        <header>
+            <div>
+                <div>
+                    <h1>Inicio</h1>
+                </div>
+                <div>
+                    <h1>Noticias</h1>
+                </div>
+                <div>
+                    <h1>Tienda</h1>
+                </div>
+                <div>
+                    <h1>Quienes somos</h1>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
