--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     </head>
     <body>
         <header>
-            <div>
-                <div>
+            <div class="menu">
+                <div class="item">
                     <h1>Inicio</h1>
                 </div>
-                <div>
+                <div class="item">
                     <h1>Noticias</h1>
                 </div>
-                <div>
+                <div class="item">
                     <h1>Tienda</h1>
                 </div>
-                <div>
+                <div class="item">
                     <h1>Quienes somos</h1>
                 </div>
             </div>
