estructura index.html

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -7,6 +7,18 @@
         <link rel="stylesheet" href="Style.css"/>
     </head>
     <body>
+        <div name="perfil">
+            <div name="fotoperfil">
 
+            </div>
+            <div name="userdata">
+
+            </div>
+        </div>
+        <div name="Plist">
+            <div name="P1"></div>
+            <div name="P1"></div>
+            <div name="P1"></div>
+        </div>
     </body>
 </html>
