vista de seccion de perfil

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="Style.css"/>
     </head>
     <body>
-        <div name="perfil">
-            <div name="fotoperfil">
-
+        <div name="perfil" class="screen">
+            <div name="fotoperfil" class="fotomarco tercio">
+                <img class="fotoperfil" src="https://static.wikia.nocookie.net/comida-y-bebidas/images/0/05/Pera.png/revision/latest?cb=20230221195400&path-prefix=es" alt="" />
             </div>
             <div name="userdata">
 
