se añade espacio para los datos de perfil

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -10,17 +10,30 @@
     </head>
     <body>
         <div name="perfil" class="screen">
-            <div name="fotoperfil" class="fotomarco tercio">
+            <div name="fotoperfil" class="fotomarco">
                 <img class="fotoperfil" src="https://static.wikia.nocookie.net/comida-y-bebidas/images/0/05/Pera.png/revision/latest?cb=20230221195400&path-prefix=es" alt="" />
             </div>
-            <div name="userdata">
-
+            <div name="userdata" class="userdata">
+                <ul>
+                    <li class="UserElement">
+                        <label class="userItem">Nombre:</label>
+                        <label class="userCont">Dato 1</label>
+                    </li>
+                    <li class="UserElement">
+                        <label class="userItem">Correo:</label>
+                        <label class="userCont">Dato 2</label>
+                    </li>
+                    <li class="UserElement">
+                        <label class="userItem">GitHub:</label>
+                        <label class="userCont">Dato 3</label>
+                    </li>
+                </ul>
             </div>
         </div>
         <div name="Plist">
             <div name="P1"></div>
-            <div name="P1"></div>
-            <div name="P1"></div>
+            <div name="P2"></div>
+            <div name="P3"></div>
         </div>
     </body>
 </html>
