Cambio en link de git

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -30,7 +30,7 @@
                     <li class="UserElement">
                         <label class="userItem">GitHub:</label>
                         <label name="github" class="userCont">
-                            <a href="http://github.com/HectorLedezma?tab=repositories">HectorLedezma</a>
+                            <a name="gitLink" href=""></a>
                         </label>
                     </li>
                 </ul>
