--- a/Lab1/proyecto.html
+++ b/Lab1/proyecto.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head class="ProyectPage">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
@@ -11,13 +11,18 @@
     <body>
         <div class="banner">
             <div name="titulo" class="TProyect">
-                <label>Albión online</label>
+                <label name="tituloTexto">
+                    
+                </label>
             </div>
             <div class="descripcion">
                 <div class="Texto">
-                    <p>Albión online es un mmorpg no lineal, en el que escribes tu propia historia sin limitarte a seguir un camino prefijado, explora un amplio mundo abierto con 5 biomas únicos, todo cuanto hagas tendrá su repercusión en el mundo, con la economía orientada al jugador de Albión , los jugadores crean prácticamente todo el equipo a partir de los recursos que consiguen, el equipo que llevas define quien eres, cambia de arma y armadura para pasar de caballero a mago, o juega como una mezcla de ambas clases, aventúrate en el mundo abierto frente a los habitantes y las criaturas de Albión , inicia expediciones o adéntrate en mazmorras en las que encontrarás enemigos aún más difíciles, enfréntate a otros jugadores en encuentros en el mundo Abierto, lucha por los territorios o por ciudades enteras en batallas tácticas, relájate en tu isla privada, donde podrás construir un hogar cultivar cosechas y criar animales, únete a un gremio, todo es mejor cuando se trabaja en grupo, adéntrate ya en el mundo de Albión y escribe tu propia historia.</p>
+                    <p>
+
+                    </p>
                 </div>
             </div>
         </div>
     </body>
+    <script src="script.js"></script>
 </html>
