--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -10,29 +10,31 @@
     </head>
     <header>
         <div name="perfil" class="screen">
-            <div class="fotomarco">
-                <img class="fotoperfil" name="fotoperfil" src="" alt="FotoPerfil" />
-            </div>
-            <div Name="userdata" class="userdata">
-                <ul>
-                    <li class="UserElement">
-                        <label class="userItem">Nombre:</label>
-                        <label name="Nombre" class="userCont"></label>
-                    </li>
-                    <li class="UserElement">
-                        <label class="userItem">Edad:</label>
-                        <label name="Age" class="userCont"></label>
-                    </li>
-                    <li class="UserElement">
-                        <label class="userItem">Correo:</label>
-                        <label name="Mail" class="userCont"></label>
-                    </li>
-                    <li class="UserElement">
-                        <label class="userItem">GitHub:</label>
-                        <label name="github" class="userCont"></label>
-                        <button name="gitLink" class="gitLink btn-colorT">Visitar</button>
-                    </li>
-                </ul>
+            <div class="dp-flex screenLayout">
+                <div class="fotomarco">
+                    <img class="fotoperfil" name="fotoperfil" src="" alt="FotoPerfil" />
+                </div>
+                <div Name="userdata" class="userdata">
+                    <ul>
+                        <li class="UserElement brd-10px">
+                            <label class="userItem">Nombre:</label>
+                            <label name="Nombre" class="userCont"></label>
+                        </li>
+                        <li class="UserElement brd-10px">
+                            <label class="userItem">Edad:</label>
+                            <label name="Age" class="userCont"></label>
+                        </li>
+                        <li class="UserElement brd-10px">
+                            <label class="userItem">Correo:</label>
+                            <label name="Mail" class="userCont"></label>
+                        </li>
+                        <li class="UserElement brd-10px">
+                            <label class="userItem">GitHub:</label>
+                            <label name="github" class="userCont"></label>
+                            <button name="gitLink" class="gitLink btn-colorT">Visitar</button>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
@@ -56,7 +58,7 @@
                             <button name="PrLink1" class="gitLink pboton btn-colorT">Ver Proyecto</button>
                         </div>
                     </div>
-                    <div class="tercio bgc-blanco ta-center brd-10px mrg-10px">
+                    <div class="tercio bgc-blanco ta-center brd-10px mrg-10px imP">
                         <img name="P1img" class="brd-10px mrg-10px pimage" src="", alt="img-proyect"/>
                     </div>
                 </div>
@@ -77,7 +79,7 @@
                             <button name="PrLink2" class="gitLink pboton btn-colorT">Ver Proyecto</button>
                         </div>
                     </div>
-                    <div class="tercio bgc-blanco ta-center brd-10px mrg-10px">
+                    <div class="tercio bgc-blanco ta-center brd-10px mrg-10px imP">
                         <img name="P2img" class="brd-10px mrg-10px pimage" src="", alt="img-proyect"/>
                     </div>
                 </div>
@@ -98,7 +100,7 @@
                             <button name="PrLink3" class="gitLink pboton btn-colorT" href="./proyecto.html">Ver Proyecto</button>
                         </div>
                     </div>
-                    <div class="tercio bgc-blanco ta-center brd-10px mrg-10px">
+                    <div class="tercio bgc-blanco ta-center brd-10px mrg-10px imP">
                         <img name="P3img" class="brd-10px mrg-10px pimage" src="", alt="img-proyect"/>
                     </div>
                 </div>
